--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
             <button id="read-one">Find One by Id</button>
             <button id="delete">Delete</button>
             <button id="clean">Clean</button>
+            <button id="show-favorites">Show favorites</button>
         </section>
         <h3>Album</h3>
         <section id="album">
 
         </section>
 
-        <!-- <section>
+        <section>
             <h2>Firebase Authentication</h2>
             <div id="forms-container">
                 <div>
@@ -70,7 +71,7 @@
 
                 </div>
             </div>
-        </section> -->
+        </section>
 
     </main>
     <footer>
